<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mainActivity_geomType_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mainActivity_geometryType"
            android:textSize="18sp" />

        <Button
            android:id="@+id/mainActivity_geomType_pointButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_pointLayer" />

        <Button
            android:id="@+id/mainActivity_geomType_lineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_lineLayer" />

        <Button
            android:id="@+id/mainActivity_geomType_polygonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_polygonLayer" />

    </LinearLayout>
</FrameLayout>