<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_chooseBasemap"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_osm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/values_osm" />

        <Button
            android:id="@+id/btn_topo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/values_topo" />

    </LinearLayout>
</FrameLayout>