<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewLayersActivity">

    <Button
        android:id="@+id/viewLayers_locationCenterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewLayersActivity_centerAtLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLayers_longitudeText" />

    <org.osmdroid.views.MapView
        android:id="@+id/viewLayers_mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLayers_locationCenterButton">

    </org.osmdroid.views.MapView>

    <TextView
        android:id="@+id/viewLayers_latitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_latitude"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewLayers_latitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/values_latitude"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/viewLayers_latitudeText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewLayers_longitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_longitude"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLayers_latitudeText" />

    <TextView
        android:id="@+id/viewLayers_longitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/values_longitude"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/viewLayers_longitudeText"
        app:layout_constraintTop_toBottomOf="@+id/viewLayers_latitudeValue" />

</androidx.constraintlayout.widget.ConstraintLayout>