<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePointLayersActivity">

    <TextView
        android:id="@+id/createPolygonLayers_latitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_latitude"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createPolygonLayers_latitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/values_latitude"
        app:layout_constraintStart_toEndOf="@+id/createPolygonLayers_latitudeText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createPolygonLayers_longitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_longitude"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPolygonLayers_latitudeText" />

    <TextView
        android:id="@+id/createPolygonLayers_longitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/values_longitude"
        app:layout_constraintStart_toEndOf="@+id/createPolygonLayers_longitudeText"
        app:layout_constraintTop_toTopOf="@+id/createPolygonLayers_longitudeText" />

    <Button
        android:id="@+id/createPolygonLayers_addNewVertex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_addVertex"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPolygonLayers_mapView" />

    <org.osmdroid.views.MapView
        android:id="@+id/createPolygonLayers_mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPolygonLayers_longitudeValue">

    </org.osmdroid.views.MapView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6019152" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/attributes_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_attributes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/createPolygonLayers_CreatePolygonFromVertices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_createPolygon"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPolygonLayers_removeLastVertex" />

    <ListView
        android:id="@+id/createPolygonLayers_attributesList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:descendantFocusability="afterDescendants"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attributes_txt"
        app:layout_constraintVertical_bias="0.0" >

    </ListView>

    <Button
        android:id="@+id/createPolygonLayers_removeLastVertex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_removeVertex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>